<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        style="@style/ItemDetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="List Device Request"
        android:textAlignment="center"
        android:textSize="20pt"
       />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:textAlignment="center"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/intentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:textAlignment="center"
        android:hint="@string/intent"
         />


    <EditText
        android:id="@+id/codeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intentEditText"
        android:textAlignment="center"
        android:hint="@string/code"
       />

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codeEditText"
        android:textAlignment="center"
        android:hint="@string/subject"
        />

    <Button
        android:id="@+id/addDeviceRequestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subjectEditText"
        android:textAlignment="center"
        android:text="@string/list"
        />
    </RelativeLayout>
    </androidx.cardview.widget.CardView>